--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="google-site-verification" content="JRfkf7fFUto9n3WD-9h_Wuc0dC9Yh-YtWDsg-UiJrs8" />
     <meta name="google-site-verification" content="69NHekmyxIqMeZChfHy0VGSdlqTn9b-Lxp9xxWlmCbk" />
     <meta charset="UTF-8">
     <title>St Paul Learning Centre</title>
