--- a/login.html
+++ b/login.html
@@ -19,6 +19,7 @@
         <a href="resources.html">Resources</a>
         <a href="showcase.html">About Us</a>
         <a href="contact.html">Contact</a>
+        <a href="parent-portal.html">Parent Portal</a>
     </nav>
     <section>
         <h2>Student Login</h2>
