--- a/admissions.html
+++ b/admissions.html
@@ -12,15 +12,17 @@
         <div class="motto">Strive For Success</div>
         <p>Empowering students, connecting families, supporting teachers.</p>
     </header>
-    <nav>
-        <a href="index.html">News & Announcements</a>
-        <a href="student-portal.html">Student Portal</a>
-        <a href="admissions.html">Admissions</a>
-        <a href="resources.html">Resources</a>
-        <a href="showcase.html">About Us</a>
-        <a href="contact.html">Contact</a>
-        <a href="parent-portal.html">Parent Portal</a>
-    </nav>
+  <nav>
+    <a href="index.html">News & Announcements</a>
+    <a href="student-portal.html">Student Portal</a>
+    <a href="admissions.html">Admissions</a>
+    <a href="resources.html">Resources</a>
+    <a href="showcase.html">About Us</a>
+    <a href="contact.html">Contact</a>
+    <a href="timetable.html">Timetable</a>
+    <a href="teacher-resources.html">Teacher Resources</a>
+    <a href="parent-portal.html">Parent Portal</a>
+</nav>
     <section>
         <h2>Online Admissions</h2>
         <p>New students can apply and register online. Fill out the admission form and track your application status easily.</p>
