--- a/index.html
+++ b/index.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="JRfkf7fFUto9n3WD-9h_Wuc0dC9Yh-YtWDsg-UiJrs8" />
-    <meta name="google-site-verification" content="69NHekmyxIqMeZChfHy0VGSdlqTn9b-Lxp9xxWlmCbk" />
     <meta charset="UTF-8">
     <title>St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Professional Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-    <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-    <h1>St Paul Learning Centre</h1>
-    <div class="motto">Strive For Success</div>
-    <p>Empowering students, connecting families, supporting teachers.</p>
-    </header>
-    <nav>
-    <a href="index.html">News & Announcements</a>
-    <a href="student-portal.html">Student Portal</a>
-    <a href="admissions.html">Admissions</a>
-    <a href="resources.html">Resources</a>
-    <a href="showcase.html">About Us</a>
-    <a href="contact.html">Contact</a>
-    <a href="parent-portal.html">Parent Portal</a>
-</nav>
+    <!-- Top Bar -->
+    <div class="navbar">
+        <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+        <span class="logo-text">St Paul Learning Centre</span>
+        <!-- Hamburger Menu Button -->
+        <span class="menu-btn" onclick="openMenu()">&#9776;</span>
+    </div>
+
+    <!-- Sidebar Menu -->
+    <div id="sideMenu" class="side-menu">
+        <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()">&times;</a>
+        <a href="index.html">News & Announcements</a>
+        <a href="student-portal.html">Student Portal</a>
+        <a href="admissions.html">Admissions</a>
+        <a href="resources.html">Resources</a>
+        <a href="showcase.html">Showcase</a>
+        <a href="contact.html">Contact</a>
+        <a href="timetable.html">Timetable</a>
+        <a href="teacher-resources.html">Teacher Resources</a>
+        <a href="parent-portal.html">Parent Portal</a>
+    </div>
 
     <section>
-        <h2>Latest News & Announcements</h2>
-        <ul class="feature-list">
-            <li>School reopens for Term 3 on September 18th.</li>
-            <li>Parent-Teacher meeting scheduled for October 5th.</li>
-            <li>Congratulations to our Debate Team for winning the regional finals!</li>
-        </ul>
+        <h2>Welcome to St Paul Learning Centre</h2>
+        <p>Empowering students, connecting families, supporting teachers.</p>
+        <!-- Your main page content here -->
     </section>
-
     <footer>
         &copy; 2025 St Paul Learning Centre. All rights reserved.
     </footer>
+
+    <!-- Simple JS for menu toggle -->
+    <script>
+    function openMenu() {
+        document.getElementById("sideMenu").style.width = "260px";
+    }
+    function closeMenu() {
+        document.getElementById("sideMenu").style.width = "0";
+    }
+    </script>
 </body>
-</html>
+    </html>
