--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <title>St Paul Learning Centre</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Professional Google Font -->
+    <!-- Google Fonts for Inter -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Top Bar -->
     <div class="navbar">
-        <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-        <span class="logo-text">St Paul Learning Centre</span>
-        <!-- Hamburger Menu Button -->
+        <!-- Hamburger Menu Button on the LEFT -->
         <span class="menu-btn" onclick="openMenu()">&#9776;</span>
+        <div class="navbar-center">
+            <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
+            <span class="logo-text">St Paul Learning Centre</span>
+        </div>
     </div>
 
     <!-- Sidebar Menu -->
@@ -50,4 +52,4 @@
     }
     </script>
 </body>
-    </html>
+</html>
