--- a/index.html
+++ b/index.html
@@ -1,25 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyC8U3O0uj24JqRT2KLfmVu2prR5Of_8z8U",
-    authDomain: "my-school-st-paul-bf857.firebaseapp.com",
-    projectId: "my-school-st-paul-bf857",
-    storageBucket: "my-school-st-paul-bf857.firebasestorage.app",
-    messagingSenderId: "846479828685",
-    appId: "1:846479828685:web:2308649a255c8c251e2b84"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-    </script>
+    <!-- Firebase should be loaded in type="module" scripts, but inline modules are not widely supported in all browsers.
+         The best practice is to keep your <script type="module"> at the end of <body> or in a separate JS file. -->
     <meta name="google-site-verification" content="R3kH-LbUwNa0uZwAc91SCEMZh46mtNGdyCv-h7_bMow" />
     <meta charset="UTF-8">
     <title>St Paul Learning Centre</title>
@@ -100,6 +83,23 @@
             closeMenu();
         }
     });
+    </script>
+    <!-- Firebase Initialization: place this after all HTML for best compatibility -->
+    <script type="module">
+      import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+      // TODO: Add SDKs for Firebase products that you want to use:
+      // https://firebase.google.com/docs/web/setup#available-libraries
+
+      const firebaseConfig = {
+        apiKey: "AIzaSyC8U3O0uj24JqRT2KLfmVu2prR5Of_8z8U",
+        authDomain: "my-school-st-paul-bf857.firebaseapp.com",
+        projectId: "my-school-st-paul-bf857",
+        storageBucket: "my-school-st-paul-bf857.appspot.com", <!-- Corrected domain: .appspot.com not .storage.app -->
+        messagingSenderId: "846479828685",
+        appId: "1:846479828685:web:2308649a255c8c251e2b84"
+      };
+
+      const app = initializeApp(firebaseConfig);
     </script>
 </body>
 </html>
