--- a/index.html
+++ b/index.html
@@ -1,82 +1,105 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<!DOCTTYPE html>
+<html lang="sw">
+<kichwa>
     <meta name="google-site-verification" content="R3kH-LbUwNa0uZwAc91SCEMZh46mtNGdyCv-h7_bMow" />
     <meta charset="UTF-8">
-    <title>St Paul Learning Centre</title>
+    <title>Kituo cha Mafunzo cha St Paul</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Top Bar -->
+</ kichwa>
+<mwili>
+    <!-- Upau wa Juu -->
     <div class="navbar">
-        <span class="menu-btn" onclick="openMenu()" tabindex="0" aria-label="Main menu">&#9776;</span>
+        <span class="menu-btn" onclick="openMenu()" tabindex="0" aria-label="Main menu">☰</span>
         <div class="navbar-center">
-            <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="School Logo" class="school-logo">
-            <span class="logo-text">St Paul Learning Centre</span>
-        </div>
-    </div>
+            <img src="https://i.postimg.cc/t4yDG3Fq/Mon-21-07-2025-16-26-06.png" alt="Nembo ya Shule" class="school-logo">
+            <span class="logo-text">Kituo cha Mafunzo cha St Paul</span>
+        </ div>
+    </ div>
 
-    <!-- Sidebar Menu -->
+    <!-- Menyu ya Upau wa kando -->
     <nav id="sideMenu" class="side-menu" aria-label="Sidebar navigation">
-        <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()" tabindex="0" aria-label="Close menu">&times;</a>
-        <a href="index.html">News & Announcements</a>
-        <a href="student-portal.html">Student Portal</a>
-        <a href="admissions.html">Admissions</a>
-        <a href="resources.html">Resources</a>
-        <a href="showcase.html">Showcase</a>
-        <a href="contact.html">Contact</a>
-        <a href="timetable.html">Timetable</a>
-        <a href="teacher-resources.html">Teacher Resources</a>
-        <a href="parent-portal.html">Parent Portal</a>
-    </nav>
+        <a href="javascript:void(0)" class="close-btn" onclick="closeMenu()" tabindex="0" aria-label="Close menu">×</a>
+        <a href="index.html">Habari na Matangazo</a>
+        <a href="student-portal.html">Lango la Wanafunzi</a>
+        <a href="admissions.html">Viingilio</a>
+        <a href="resources.html">Rasilimali</a>
+        <a href="showcase.html">Onyesho</a>
+        <a href="contact.html">Wasiliana</a>
+        <a href="timetable.html">Ratiba</a>
+        <a href="teacher-resources.html">Rasilimali za Walimu</a>
+        <a href="parent-portal.html">Mlango wa Mzazi</a>
+    </ nav>
 
-    <header>
-        <h1>St Paul Learning Centre</h1>
-        <div class="motto">Strive For Success</div>
-        <p>Empowering students, connecting families, supporting teachers.</p>
-    </header>
+    <kichwa>
+        <h1>Kituo cha Mafunzo cha St Paul</h1>
+        <div class="motto">Jitahidi Kwa Mafanikio</div>
+        <p>Kuwawezesha wanafunzi, kuunganisha familia, kusaidia walimu.</p>
+    </kichwa>
 
-    <section>
-        <h2>Welcome to St Paul Learning Centre</h2>
+    <sehemu>
+        <h2>Karibu katika Kituo cha Mafunzo cha St Paul</h2>
         <p>
-            St Paul Learning Centre is dedicated to nurturing every student’s potential and fostering a vibrant, supportive community for families and educators. Explore our student and parent portals, discover resources, view our school showcase, and stay updated with news and announcements.
-        </p>
+            Kituo cha Mafunzo cha St Paul kimejitolea kukuza uwezo wa kila mwanafunzi na kukuza jamii iliyochangamka, inayounga mkono familia na waelimishaji. Gundua tovuti zetu za wanafunzi na wazazi, gundua nyenzo, tazama onyesho letu la shule na usasishwe na habari na matangazo.
+        </ p>
 
         <div class="gallery">
             <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="School Hall">
             <img src="https://images.unsplash.com/photo-1464983953574-0892a716854b?auto=format&fit=crop&w=400&q=80" alt="Classroom">
             <img src="https://images.unsplash.com/photo-1513258496099-48168024aec0?auto=format&fit=crop&w=400&q=80" alt="Library">
-        </div>
+        </ div>
 
-        <h3>Quick Access</h3>
+        <h3>Ufikiaji Haraka</h3>
         <ul class="feature-list">
-            <li><a href="student-portal.html">Student Portal</a> – Access learning materials and your timetable</li>
-            <li><a href="parent-portal.html">Parent Portal</a> – Monitor progress and communicate with teachers</li>
-            <li><a href="admissions.html">Admissions</a> – Join our community</li>
-            <li><a href="resources.html">Resources</a> – Study tools and support</li>
-            <li><a href="showcase.html">Showcase</a> – Discover our achievements and history</li>
-            <li><a href="contact.html">Contact</a> – Get in touch with us</li>
+            <li><a href="student-portal.html">Lango la Mwanafunzi</a> - Fikia nyenzo za kujifunzia na ratiba yako</li>
+            <li><a href="parent-portal.html">Lango la Mzazi</a> – Fuatilia maendeleo na uwasiliane na walimu</li>
+            <li><a href="admissions.html">Viingilio</a> - Jiunge na jumuiya yetu</li>
+            <li><a href="resources.html">Nyenzo</a> - Zana za kujifunza na usaidizi</li>
+            <li><a href="showcase.html">Onyesho</a> - Gundua mafanikio na historia yetu</li>
+            <li><a href="contact.html">Wasiliana</a> - Wasiliana nasi</li>
         </ul>
-    </section>
+    </ sehemu>
     <footer>
-        &copy; 2025 St Paul Learning Centre. All rights reserved.
-    </footer>
+        &nakala; 2025 St Paul Learning Centre. Haki zote zimehifadhiwa.
+    </ footer>
 
     <script>
-    function openMenu() {
+    fanya kazi openMenu() {
         document.getElementById("sideMenu").style.width = "260px";
     }
-    function closeMenu() {
+    kazi closeMenu() {
         document.getElementById("sideMenu").style.width = "0";
     }
-    document.addEventListener('keydown', function(event) {
-        if (event.key === "Escape") {
-            closeMenu();
+    document.addEventListener('keydown', function(tukio) {
+        ikiwa (tukio. muhimu === "Escape") {
+            fungaMenu();
         }
     });
     </script>
     <script type="module" src="firebase-init.js"></script>
-</body>
-</html>
+
+</b// Leta vitendaji unavyohitaji kutoka kwa SDK unazohitaji
+agiza { initializeApp } kutoka "firebase/app";
+agiza { getAnalytics } kutoka "firebase/analytics";
+// CHA KUFANYA: Ongeza SDK za bidhaa za Firebase ambazo ungependa kutumia
+// https://firebase.google.com/docs/web/setup#available-libraries
+
+// Usanidi wa Firebase wa programu yako ya wavuti
+// Kwa Firebase JS SDK v7.20.0 na baadaye, kipimoId ni cha hiari
+const firebaseConfig = {
+  apiKey: "AIzaSyCG_G00ethQ-1w8xZ_LQL1LPuWPw50SF7A",
+  authDomain: "nicholasai-c7ccd.firebaseapp.com",
+  databaseURL: "https://nicholasai-c7ccd-default-rtdb.firebaseio.com",
+  projectId: "nicholasai-c7ccd",
+  storageBucket: "nicholasai-c7ccd.firebasestorage.app",
+  ujumbeSenderId: "489356712608",
+  appId: "1:489356712608:web:7bb74e949ead6d3872c7c5",
+  Kitambulisho cha kipimo: "G-40XTNMHE2V"
+};
+
+// Anzisha Firebase
+const app = initializeApp(firebaseConfig);
+const analytics = getAnalytics(programu); ody>
+</ html>
+ ml>
